diesel_compile_tests/tests/fail/custom_returning_requires_selectable_expression.stderr
error[E0277]: cannot select `bad::columns::age` from `ReturningQuerySource<UpdateStmt, table>`
   --> tests/fail/custom_returning_requires_selectable_expression.rs:32:20
    |
 LL |         .returning(bad::age);
    |          --------- ^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
help: the trait `SelectableExpression<diesel::query_builder::returning::returning_query_source::ReturningQuerySource<diesel::query_builder::returning::returning_query_source::UpdateStmt, users::table>>` is not implemented for `bad::columns::age`
   --> tests/fail/custom_returning_requires_selectable_expression.rs:15:7
    |
 LL |       age -> Integer,
    |       ^^^
    = note: `bad::columns::age` is no valid selection for `ReturningQuerySource<UpdateStmt, table>`
    = help: `bad::columns::age` implements trait `SelectableExpression<QS>`:
              SelectableExpression<Only<bad::table>>
              SelectableExpression<Tablesample<bad::table, TSM>>
              SelectableExpression<bad::table>
              SelectableExpression<ReturningQuerySource<..., ...>>
              SelectableExpression<SelectStatement<...>>
              SelectableExpression<Join<Left, Right, Inner>>
              SelectableExpression<Join<Left, Right, LeftOuter>>
              SelectableExpression<query_source::joins::JoinOn<Join, On>>
    = note: required for `UpdateStatement<table, WhereClause<...>, ..., ...>` to implement `Query`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/update_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> UpdateStatement<T, U, V, ReturningClause<E>>
    |            --------- required by a bound in this associated function
...
LL |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
    |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot select `bad::columns::age` from `ReturningQuerySource<..., ...>`
   --> tests/fail/custom_returning_requires_selectable_expression.rs:40:20
    |
 LL |         .returning((name, bad::age));
    |          --------- ^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
help: the trait `SelectableExpression<diesel::query_builder::returning::returning_query_source::ReturningQuerySource<diesel::query_builder::returning::returning_query_source::InsertStmtWithoutOnConflictDoUpdate, users::table>>` is not implemented for `bad::columns::age`
   --> tests/fail/custom_returning_requires_selectable_expression.rs:15:7
    |
 LL |       age -> Integer,
    |       ^^^
    = note: `bad::columns::age` is no valid selection for `ReturningQuerySource<..., ...>`
    = help: `bad::columns::age` implements trait `SelectableExpression<QS>`:
              SelectableExpression<Only<bad::table>>
              SelectableExpression<Tablesample<bad::table, TSM>>
              SelectableExpression<bad::table>
              SelectableExpression<ReturningQuerySource<..., ...>>
              SelectableExpression<SelectStatement<...>>
              SelectableExpression<Join<Left, Right, Inner>>
              SelectableExpression<Join<Left, Right, LeftOuter>>
              SelectableExpression<query_source::joins::JoinOn<Join, On>>
    = note: required for `(users::columns::name, bad::columns::age)` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
    = note: required for `InsertStatement<table, ..., ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/insert_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> InsertStatement<T, U, Op, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ReturningQuerySource<..., ...> as AppearsInFromClause<...>>::Count == Once`
   --> tests/fail/custom_returning_requires_selectable_expression.rs:40:20
    |
 LL |         .returning((name, bad::age));
    |          --------- ^^^^^^^^^^^^^^^^ expected `Once`, found `Never`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `bad::columns::age` to implement `AppearsOnTable<ReturningQuerySource<..., ...>>`
   --> tests/fail/custom_returning_requires_selectable_expression.rs:15:7
    |
 LL |       age -> Integer,
    |       ^^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 1 redundant requirement hidden
    = note: required for `(users::columns::name, bad::columns::age)` to implement `AppearsOnTable<ReturningQuerySource<..., ...>>`
    = note: required for `(users::columns::name, bad::columns::age)` to implement `SelectableExpression<ReturningQuerySource<..., ...>>`
    = note: required for `InsertStatement<table, ..., ..., ...>` to implement `Query`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> DIESEL/diesel/diesel/src/query_builder/insert_statement/mod.rs
    |
LL |     pub fn returning<E>(self, returns: E) -> InsertStatement<T, U, Op, ReturningClause<E>>
    |            --------- required by a bound in this associated function
LL |     where
LL |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
